-- Ejecutar el script en sql*developper o sql*plus

CREATE TABLE CUSTOMERS (
    CUSTOMER_ID         NUMBER(10)      NOT NULL,
    FIRST_NAME          VARCHAR2(30)    NOT NULL,
    LAST_NAME           VARCHAR2(30)    NOT NULL,
    EMAIL               VARCHAR2(50)    NOT NULL,
    COUNTRY             VARCHAR2(50),
    CITY                VARCHAR2(100),
    CANAL               VARCHAR2(100),
    REGISTRATION_DATE   DATE,
    CONSTRAINT PK_CUSTOMERS PRIMARY KEY (CUSTOMER_ID)
);

CREATE TABLE CATEGORIES
(
    CATEGORY_ID             NUMBER(10)      NOT NULL, -- PK
    NAME                    VARCHAR2(50)    NOT NULL,
    DESCRIPTION             VARCHAR2(300),
    CONSTRAINT PK_CATEGORIES PRIMARY KEY (CATEGORY_ID)
);

CREATE TABLE PRODUCTS
(
    PRODUCT_ID              NUMBER(20)      NOT NULL, -- PK
    CATEGORY_ID             NUMBER(10)      NOT NULL, -- FK A CATEGORIES
    NAME                    VARCHAR2(100)   NOT NULL,
    DESCRIPTION             VARCHAR2(300),
    PVP                     NUMBER(10,2)    NOT NULL,
    COST                    NUMBER(10,2)    NOT NULL,
    STOCK                   NUMBER(10)      NOT NULL,
    STATUS                  NUMBER(1)       DEFAULT 1 NOT NULL,
    CONSTRAINT PK_PRODUCTS PRIMARY KEY (PRODUCT_ID),
    CONSTRAINT FK_PRODUCTS_CATEGORIES FOREIGN KEY (CATEGORY_ID) REFERENCES CATEGORIES(CATEGORY_ID),
    CONSTRAINT CK_PRODUCTS_STATUS CHECK (STATUS IN (0, 1))
);

CREATE TABLE ORDERS
(
    ORDER_ID                NUMBER(20)      NOT NULL, -- PK
    CUSTOMER_ID             NUMBER(10)      NOT NULL, -- FK A CUSTOMERS
    ORDER_DATE              DATE            NOT NULL,
    SEND_CITY               VARCHAR2(100)   NOT NULL,
    SEND_COUNTRY            VARCHAR2(50)    NOT NULL,
    SEND_POSTAL_CODE        VARCHAR2(10)    NOT NULL,
    SEND_ADDRESS            VARCHAR2(200)   NOT NULL,
    SEND_DATE               DATE,
    RECEIVE_DATE            DATE,
    TOTAL_AMOUNT            NUMBER(10,2)    NOT NULL,
    STATUS                  VARCHAR2(20)    NOT NULL,
    CONSTRAINT PK_ORDERS PRIMARY KEY (ORDER_ID),
    CONSTRAINT FK_ORDERS_CUSTOMERS FOREIGN KEY (CUSTOMER_ID) REFERENCES CUSTOMERS(CUSTOMER_ID)
);

CREATE TABLE ORDER_ITEMS
(
    ORDER_ID                NUMBER(20)      NOT NULL, -- PK y FK A ORDERS
    ORDER_ITEMS_ID          NUMBER(20)      NOT NULL, -- PK 
    PRODUCT_ID              NUMBER(20)      NOT NULL, -- FK A PRODUCTS
    QUANTITY                NUMBER(10)      NOT NULL,
    UNIT_PRICE              NUMBER(10,2)    NOT NULL,
    DISCOUNT                NUMBER(10,2)    NOT NULL,
    CONSTRAINT PK_ORDER_ITEMS PRIMARY KEY (ORDER_ID, ORDER_ITEMS_ID),
    CONSTRAINT FK_ORDER_ITEMS_ORDERS FOREIGN KEY (ORDER_ID) REFERENCES ORDERS(ORDER_ID),
    CONSTRAINT FK_ORDER_ITEMS_PRODUCTS FOREIGN KEY (PRODUCT_ID) REFERENCES PRODUCTS(PRODUCT_ID),
    CONSTRAINT UQ_ORDER_ITEMS UNIQUE (ORDER_ID, PRODUCT_ID) -- Un producto solo puede estar una vez en el pedido.
);

CREATE TABLE PAYMENTS
(
    PAYMENT_ID              NUMBER(20)      NOT NULL, -- PK
    ORDER_ID                NUMBER(20)      NOT NULL, -- FK A ORDERS
    PAYMENT_DATE            DATE            NOT NULL,
    AMOUNT                  NUMBER(10,2)    NOT NULL,
    PAYMENT_METHOD          VARCHAR2(20)    NOT NULL,
    STATUS                  VARCHAR2(20)    NOT NULL,
    CONSTRAINT PK_PAYMENTS PRIMARY KEY (PAYMENT_ID),
    CONSTRAINT FK_PAYMENTS_ORDERS FOREIGN KEY (ORDER_ID) REFERENCES ORDERS(ORDER_ID)
);

CREATE TABLE REVIEWS
(
    REVIEW_ID               NUMBER(20)      NOT NULL, -- PK
    PRODUCT_ID              NUMBER(20)      NOT NULL, -- FK A PRODUCTS
    CUSTOMER_ID             NUMBER(10)      NOT NULL, -- FK A CUSTOMERS
    ORDER_ID                NUMBER(20)      NOT NULL, -- FK A ORDER_ITEMS
    ORDER_ITEMS_ID          NUMBER(20)      NOT NULL, -- FK A ORDER_ITEMS
    RATING                  NUMBER(1)       NOT NULL,
    COMMENT_TEXT            VARCHAR2(300),
    REVIEW_DATE             DATE            NOT NULL,
    CONSTRAINT PK_REVIEWS PRIMARY KEY (REVIEW_ID),
    CONSTRAINT FK_REVIEWS_PRODUCTS FOREIGN KEY (PRODUCT_ID) REFERENCES PRODUCTS(PRODUCT_ID),
    CONSTRAINT FK_REVIEWS_CUSTOMERS FOREIGN KEY (CUSTOMER_ID) REFERENCES CUSTOMERS(CUSTOMER_ID),
    CONSTRAINT FK_REVIEWS_ORDER_ITEMS FOREIGN KEY (ORDER_ID, ORDER_ITEMS_ID) REFERENCES ORDER_ITEMS(ORDER_ID, ORDER_ITEMS_ID),
    CONSTRAINT CK_REVIEWS_RATING CHECK (RATING BETWEEN 1 AND 5)
);