erDiagram
    CATEGORIES ||--o{ PRODUCTS : "1:N (tiene)"
    CUSTOMERS ||--o{ ORDERS : "1:N (realiza)"
    ORDERS ||--|{ ORDER_ITEMS : "1:N (contiene)"
    PRODUCTS ||--o{ ORDER_ITEMS : "1:N (incluido en)"
    ORDERS ||--o{ PAYMENTS : "1:N (recibe)"
    PRODUCTS ||--o{ REVIEWS : "1:N (evaluado en)"
    CUSTOMERS ||--o{ REVIEWS : "1:N (escribe)"
    ORDER_ITEMS ||--o{ REVIEWS : "1:N (revisado en)"

    CUSTOMERS {
        NUMBER_10 CUSTOMER_ID PK
        VARCHAR2_30 FIRST_NAME
        VARCHAR2_30 LAST_NAME
        VARCHAR2_50 EMAIL
        VARCHAR2_50 COUNTRY
        VARCHAR2_100 CITY
        VARCHAR2_100 CANAL
        DATE REGISTRATION_DATE
    }

    CATEGORIES {
        NUMBER_10 CATEGORY_ID PK
        VARCHAR2_50 NAME
        VARCHAR2_300 DESCRIPTION
    }

    PRODUCTS {
        NUMBER_20 PRODUCT_ID PK
        NUMBER_10 CATEGORY_ID
        VARCHAR2_100 NAME
        VARCHAR2_300 DESCRIPTION
        NUMBER_10_2 PVP
        NUMBER_10_2 COST
        NUMBER_10 STOCK
        NUMBER_1 STATUS
    }

    ORDERS {
        NUMBER_20 ORDER_ID PK
        NUMBER_10 CUSTOMER_ID
        DATE ORDER_DATE
        VARCHAR2_100 SEND_CITY
        VARCHAR2_50 SEND_COUNTRY
        VARCHAR2_10 SEND_POSTAL_CODE
        VARCHAR2_200 SEND_ADDRESS
        DATE SEND_DATE
        DATE RECEIVE_DATE
        NUMBER_10_2 TOTAL_AMOUNT
        VARCHAR2_20 STATUS
    }

    ORDER_ITEMS {
        NUMBER_20 ORDER_ID PK
        NUMBER_20 ORDER_ITEMS_ID PK
        NUMBER_20 PRODUCT_ID_FK
        NUMBER_10 QUANTITY
        NUMBER_10_2 UNIT_PRICE
        NUMBER_10_2 DISCOUNT
    }

    PAYMENTS {
        NUMBER_20 PAYMENT_ID PK
        NUMBER_20 ORDER_ID
        DATE PAYMENT_DATE
        NUMBER_10_2 AMOUNT
        VARCHAR2_20 PAYMENT_METHOD
        VARCHAR2_20 STATUS
    }

    REVIEWS {
        NUMBER_20 REVIEW_ID PK
        NUMBER_20 PRODUCT_ID 
        NUMBER_10 CUSTOMER_ID 
        NUMBER_20 ORDER_ID 
        NUMBER_20 ORDER_ITEMS_ID 
        NUMBER_1 RATING
        VARCHAR2_300 COMMENT_TEXT
        DATE REVIEW_DATE
    }